--- a/Login/res/layout/activity_register.xml
+++ b/Login/res/layout/activity_register.xml
@@ -8,35 +8,58 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.login.RegisterActivity" >
 
-    <EditText
-        android:id="@+id/txtR_Name"
+    <TextView
+        android:id="@+id/textUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="59dp"
-        android:ems="10"
-        android:hint="Name"
-        android:inputType="textPersonName" >
-
-        <requestFocus />
-    </EditText>
+        android:layout_marginTop="20dp"
+        android:text="Full Name"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
-        android:id="@+id/txtR_Email"
+        android:id="@+id/txtR_Name"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textUsername"
+        android:ems="10"
+        android:hint="Full Name"
+        android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/textPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtR_Name"
+        android:layout_centerHorizontal="true"
+        android:text="E-Mail"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/txtR_Email"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textPassword"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="E-Mail"
         android:inputType="textEmailAddress" />
 
-    <EditText
-        android:id="@+id/txtR_Username"
+    <TextView
+        android:id="@+id/textNoAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtR_Email"
+        android:layout_centerHorizontal="true"
+        android:text="Username"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/txtR_Username"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textNoAccount"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="Username"
@@ -44,20 +67,41 @@
 
     <EditText
         android:id="@+id/txtR_Password"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtR_Username"
+        android:layout_below="@+id/textView4"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/btnR_Register"
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/textNoAccount"
+        android:layout_below="@+id/txtR_Username"
+        android:text="Password"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtR_Password"
         android:layout_centerHorizontal="true"
-        android:text="Register" />
+        android:layout_marginTop="20dp"
+        android:text="All fields are required !"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#CC0000" />
+
+    <Button
+        android:id="@+id/btnR_Register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView5"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="Create account" />
 
 </RelativeLayout>
