--- a/Login/res/layout/activity_main.xml
+++ b/Login/res/layout/activity_main.xml
@@ -8,26 +8,40 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.login.MainActivity" >
 
-    <EditText
-        android:id="@+id/txtUsername"
+    <TextView
+        android:id="@+id/textUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="20dp"
+        android:text="Username"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/txtUsername"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textUsername"
+        android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="username"
-        android:inputType="textPersonName" >
+        android:inputType="textPersonName" />
 
-        <requestFocus />
-    </EditText>
+    <TextView
+        android:id="@+id/textPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtUsername"
+        android:layout_centerHorizontal="true"
+        android:text="Password"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
         android:id="@+id/txtPassowrd"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/txtUsername"
-        android:layout_below="@+id/txtUsername"
+        android:layout_below="@+id/textPassword"
+        android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword" />
@@ -38,14 +52,26 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtPassowrd"
         android:layout_centerHorizontal="true"
-        android:text="Login" />
+        android:layout_marginTop="5dp"
+        android:text="Sign In" />
 
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btnLogin"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Register" />
+        android:layout_marginBottom="20dp"
+        android:text="Sign Up" />
+
+    <TextView
+        android:id="@+id/textNoAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btnRegister"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp"
+        android:text="Don&apos;t have an account?"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
