--- a/Login/res/menu/profile.xml
+++ b/Login/res/menu/profile.xml
@@ -1,11 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.login.ProfileActivity" >
+    <item android:id="@+id/action_edit" android:orderInCategory="100" android:showAsAction="always" android:icon="@drawable/ic_action_edit" android:title="@string/action_edit"></item>
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+
+   
 
 </menu>
