--- a/Login/res/layout/activity_profile.xml
+++ b/Login/res/layout/activity_profile.xml
@@ -97,4 +97,13 @@
         android:text="Cancel"
         android:visibility="invisible" />
 
+    <Button
+        android:id="@+id/btnWeather"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnSave"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:text="Show Weather" />
+
 </RelativeLayout>
